--- a/view_post.html
+++ b/view_post.html
@@ -17,7 +17,7 @@
             </p>
 
             <!-- 按讚按鈕 -->
-            <form action="{{ url_for('post.like_post', post_id=post.id) }}" method="POST" class="d-inline">
+            <form action="{{ url_for('post.like_post', post_id=post.post_id) }}" method="POST" class="d-inline">
                 <button type="submit" class="btn-like">
                     <i class="fas fa-heart"></i> {{ post.likes|length }}
                 </button>
@@ -31,7 +31,7 @@
                 
                 <!-- 留言表單 -->
                 {% if session.get('user') %}
-                <form action="{{ url_for('post.add_comment', post_id=post.id) }}" method="POST" class="comment-form mb-3">
+                <form action="{{ url_for('post.add_comment', post_id=post.post_id) }}" method="POST" class="comment-form mb-3">
                     <div class="input-group">
                         <input type="text" name="content" class="form-control comment-input" placeholder="輸入留言..." required>
                         <button type="submit" class="btn btn-primary comment-submit">
@@ -56,7 +56,7 @@
                         </div>
                         {% if session.get('role') == 'M' or comment.author_account == session.get('user') %}
                         <div class="comment-delete">
-                            <form action="{{ url_for('post.delete_comment', post_id=post.id, comment_id=comment.id) }}" method="POST">
+                            <form action="{{ url_for('post.delete_comment', post_id=post.post_id, comment_id=comment.comment_id) }}" method="POST">
                                 <input type="hidden" name="next" value="view_post">
                                 <button type="submit" onclick="return confirm('確定要刪除此留言嗎？')">
                                     <i class="fas fa-trash-alt"></i>
