--- a/new_post.html
+++ b/new_post.html
@@ -3,19 +3,24 @@
 {% block title %}新增貼文{% endblock %}
 
 {% block content %}
-    <h1 class="text-center mb-4">新增貼文</h1>
+<div class="post-form-container">
+    <h1 class="page-title">新增貼文</h1>
+
     <form method="POST">
-        <div class="mb-3">
-            <label for="title" class="form-label">標題</label>
-            <input type="text" class="form-control" id="title" name="title" required>
+        <div class="form-group">
+            <label for="title">標題</label>
+            <input type="text" id="title" name="title" required>
         </div>
-        <div class="mb-3">
-            <label for="content" class="form-label">內容</label>
-            <textarea class="form-control" id="content" name="content" rows="5" required></textarea>
+
+        <div class="form-group">
+            <label for="content">內容</label>
+            <textarea id="content" name="content" rows="5" required></textarea>
         </div>
-        <div class="d-flex justify-content-center gap-3">
-            <button type="submit" class="btn btn-success">發佈</button>
-            <a href="{{ url_for('post.index') }}" class="btn btn-secondary">返回</a>
+
+        <div class="form-buttons">
+            <button type="submit" class="btn-submit">發佈</button>
+            <a href="{{ url_for('post.index') }}" class="btn-cancel">返回</a>
         </div>
     </form>
+</div>
 {% endblock %}
