--- a/base.html
+++ b/base.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %} - 交流區</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
-    {% block extra_css %}{% endblock %}
 </head>
 <body>
+    <script src="{{ url_for('static', filename='base.js') }}"></script>
     <div class="chat-wrapper">
+        <!--css很怪-->
         <nav class="nav-bar">
             <button id="menu-toggle">
               <i class="bi bi-border-width"></i>
@@ -46,7 +46,7 @@
 
                 {% if session.get('user') %}
                     <i class="bi bi-megaphone"></i><a href="/post/interact">交流區</a>
-                    <i class="bi bi-chat-dots"></i><a href="#">聊天室</a>
+                    <i class="bi bi-chat-dots"></i><a href="/chat">聊天室</a>
                     <i class="bi bi-box-arrow-right"></i><a href="/logout">登出</a>
 
                     <div class="user-info">
@@ -73,7 +73,7 @@
                 {% endif %}
           </nav>
         </div>
-
+        <!---------------------->
         <div class="container mt-4">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
@@ -86,8 +86,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='base.js') }}"></script>
-    {% block extra_js %}{% endblock %}
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 </html>
