--- a/chat.html
+++ b/chat.html
@@ -112,7 +112,7 @@
           <button id="close-sidebar"><i class="bi bi-x-lg"></i></button>
           <h2>選單</h2>
           <hr class="menu-divider" />
-          <a href="#"><i class="fa-solid fa-house"></i> 首頁</a>
+          <a href="/dashboard"><i class="fa-solid fa-house"></i> 首頁</a>
           <a href="#"><i class="fa-solid fa-right-to-bracket"></i> 登入</a>
           <a href="#"><i class="fa-solid fa-right-from-bracket"></i> 登出</a>
         </div>
