--- a/login.html
+++ b/login.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <title>登入頁面</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
-</head>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='login.css') }}"
+    />
+  </head>
   <body>
+    <!-- 左上角 -->
+    <div class="header">輔大資管系</div>
+
+    <!-- 中間內容 -->
+    <div class="form-wrapper">
     <h2>請登入</h2>
-    <div>
-      <form action="/login" method="POST">
-        <div>
-          <label>Email:</label>
-          <input type="text" name="account" /><br />
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        <ul class="flashes">
+          {% for category, message in messages %}
+            <li class="{{ category }}">{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+
+        <form action="/login" method="POST">
+          <div>
+            <label>帳號:</label>
+            <input type="text" name="account" placeholder="請輸入 Email" />
+          </div>
+          <div>
+            <label>密碼:</label>
+            <input type="password" name="password" placeholder="請輸入密碼" />
+          </div>
+          <input type="submit" value="登入" />
+        </form>
+        <div class="register-link">
+          還沒有帳號？<a href="/register">註冊</a>
         </div>
-        <div>
-          <label>密碼:</label>
-          <input type="password" name="password" /><br />
-        </div>
-        <input type="submit" value="登入" />
-        <a href="/register">註冊</a>
-      </form>
+      </div>
     </div>
   </body>
 </html>
